--- a/server/package.json
+++ b/server/package.json
@@ -30,7 +30,9 @@
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/formidable": "^3.4.3",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/mv": "^2.1.2",
     "@types/nodemailer": "^6.4.10",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
