--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@types/express-serve-static-core": "^4.17.35",
     "bcryptjs": "^2.4.3",
+    "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "firebase-admin": "^11.10.1",
     "formidable": "^3.5.0",
@@ -24,17 +26,22 @@
     "mongoose": "^7.5.1",
     "mv": "^2.1.1",
     "nodemailer": "^6.9.3",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.3",
+    "@types/connect-mongodb-session": "^2.4.5",
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.8",
     "@types/formidable": "^3.4.3",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mv": "^2.1.2",
     "@types/nodemailer": "^6.4.10",
+    "@types/passport-google-oauth20": "^2.0.12",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
