--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "cookies-next": "^4.0.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "js-cookie": "^3.0.5",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
@@ -31,5 +32,8 @@
     "redux-thunk": "^2.4.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.4"
   }
 }
