--- a/server/vercel.json
+++ b/server/vercel.json
@@ -12,12 +12,8 @@
       "dest": "src/server.ts"
     },
     {
-      "src": "/uploads/(.*)",
-      "dest": "public/uploads/$1"
-    },
-    {
       "src": "/(.*)",
-      "dest": "src/server.ts"
+      "dest": "public/$1"
     }
   ]
 }
