Updated logic to handle uploading and accessing the files

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -12,8 +12,12 @@
       "dest": "src/server.ts"
     },
     {
+      "src": "/uploads/(.*)",
+      "dest": "public/uploads/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "public/$1"
+      "dest": "src/server.ts"
     }
   ]
 }
