--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,12 +2,12 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "outDir": "public",
+    "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "sourceMap": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "public"]
+  "exclude": ["node_modules", "dist"]
 }
