--- a/server/vercel.json
+++ b/server/vercel.json
@@ -12,7 +12,7 @@
       "dest": "src/server.ts"
     },
     {
-      "src": "/uploads/(.*)",
+      "src": "/public/uploads/(.*)",
       "dest": "public/uploads/$1"
     },
     {
