--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^7.0.1",
     "firebase-admin": "^11.10.1",
     "formidable": "^3.5.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.5.1",
     "mv": "^2.1.1",
