--- a/server/vercel.json
+++ b/server/vercel.json
@@ -12,8 +12,8 @@
       "dest": "src/server.ts"
     },
     {
-      "src": "/public/(.*)",
-      "dest": "public/$1"
+      "src": "/uploads/(.*)",
+      "dest": "public/uploads/$1"
     },
     {
       "src": "/(.*)",
