--- a/client/package.json
+++ b/client/package.json
@@ -16,10 +16,13 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "chart.js": "^4.3.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "cookies-next": "^4.0.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.279.0",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
@@ -30,7 +33,9 @@
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.6"
   },
   "devDependencies": {
