--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cookies-next": "^4.0.0",
+    "cors": "^2.8.5",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "js-cookie": "^3.0.5",
