--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.5.1",
     "mv": "^2.1.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.3",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
@@ -41,7 +42,9 @@
     "@types/express-session": "^1.17.8",
     "@types/formidable": "^3.4.3",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/moment": "^2.13.0",
     "@types/mv": "^2.1.2",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.10",
     "@types/passport-google-oauth20": "^2.0.12",
     "nodemon": "^3.0.1",
